# license

./: CMakeLists.txt  CMakeLists.txt.bak  TODO.txt
client/: client_main.cc
include/: client.h  http.h  lics_error.h  lics_interface.h  server.h
include/inner/: client.h  http.h  server.h  utils.h
install/: TODO.txt  server.conf
proto/: license.proto
server/: server.conf  server_main.cc
src/: client.cc  http.cc  server.cc  server_main.cc  utils.cc
test/: client_test.cc  server_test.cc
